tests/test-files/parse-lisp.txt
================================================================================
100 Missing expression type
================================================================================

(package test-package)

(define f (lisp))

--------------------------------------------------------------------------------

error: Malformed lisp expression
  --> test:3:15
   |
 3 |  (define f (lisp))
   |                 ^ expected expression type

================================================================================
101 Legacy lisp return type rejected
================================================================================

(package test-package)

(define f (lisp (T -> T)))

--------------------------------------------------------------------------------

error: Malformed lisp return type
  --> test:3:19
   |
 3 |  (define f (lisp (T -> T)))
   |                     ^^ nothing may appear to the left of `->` in a `lisp` return type

================================================================================
102 Legacy lisp return type rejected before body parsing
================================================================================

(package test-package)

(define f (lisp (T -> T) (x y)))

--------------------------------------------------------------------------------

error: Malformed lisp return type
  --> test:3:19
   |
 3 |  (define f (lisp (T -> T) (x y)))
   |                     ^^ nothing may appear to the left of `->` in a `lisp` return type

================================================================================
103 Legacy keyword values rejected
================================================================================

(package test-package)

(define f (lisp :values))

--------------------------------------------------------------------------------

error: Malformed lisp return type
  --> test:3:16
   |
 3 |  (define f (lisp :values))
   |                  ^^^^^^^ use `(-> ...)` return type syntax in `lisp` forms

================================================================================
106 Single-output lisp arrow return type
================================================================================

(package test-package)

(define f (lisp (-> Integer) ()
            1))

================================================================================
107 Multi-output lisp arrow return type
================================================================================

(package test-package)

(define (f)
  (lisp (-> Integer * Integer) ()
    (cl:values 1 2)))

================================================================================
108 Legacy keyword value rejected
================================================================================

(package test-package)

(define f (lisp :value))

--------------------------------------------------------------------------------

error: Malformed lisp return type
  --> test:3:16
   |
 3 |  (define f (lisp :value))
   |                  ^^^^^^ use `(-> ...)` return type syntax in `lisp` forms

================================================================================
109 Legacy symbol rejected
================================================================================

(package test-package)

(define f (lisp multiple-values-extra))

--------------------------------------------------------------------------------

error: Malformed lisp return type
  --> test:3:16
   |
 3 |  (define f (lisp multiple-values-extra))
   |                  ^^^^^^^^^^^^^^^^^^^^^ use `(-> ...)` return type syntax in `lisp` forms

================================================================================
110 Legacy keyword multiple-values rejected
================================================================================

(package test-package)

(define f (lisp :multiple-values))

--------------------------------------------------------------------------------

error: Malformed lisp return type
  --> test:3:16
   |
 3 |  (define f (lisp :multiple-values))
   |                  ^^^^^^^^^^^^^^^^ use `(-> ...)` return type syntax in `lisp` forms
